--- a/styles/style.css
+++ b/styles/style.css
@@ -78,8 +78,8 @@ a{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    height: 7.0625rem;
-    filter: drop-shadow(0px 17px 10px rgba(0, 0, 0, 0.14));
+    height: 6;
+    filter: drop-shadow(0px 1.0625rem 10px rgba(0, 0, 0, 0.14));
     border-radius: 0 0 1.5rem 1.5rem;
     background: var(--header-background-color);
 }
@@ -154,7 +154,7 @@ a{
 }
 @media (min-width: 36rem) {
   .modal-dialog {
-      max-width: 31.25rem;
+      max-width: 25rem;
       margin: 1.875rem auto;
   }
 }
@@ -198,7 +198,78 @@ a{
     -ms-flex-pack: justify;
     justify-content: space-between;
     padding: .9375rem;
-    border-bottom: 0.0625rem solid #eceeef;
+    border-bottom: 0.0625rem solid var(--text-color);
+}
+
+.modal-title {
+    margin-top: 0;
+    margin-bottom: 0;
+    line-height: 1.5;
+    font-size: 1.25rem;
+    font-weight: 500;
+    color: var(--text-color);
+    font-family: Jost, sans-serif;
+}
+
+.modal-body {
+    position: relative;
+    -webkit-box-flex: 1;
+    -webkit-flex: 1 1 auto;
+    -ms-flex: 1 1 auto;
+    flex: 1 1 auto;
+    padding: 1.5rem;
+    overflow: auto;
+}
+
+.modal-nav{
+    display: flex;
+    flex-flow: column wrap;
+    align-items: center;
+    justify-content: center;
+}
+
+.modal-nav label{
+    text-align: left;
+    margin-bottom: 0.5rem;
+    margin-top: 1rem;
+}
+
+.modal-inputs{
+    display: flex;
+    flex-direction: column;
+}
+
+.modal-nav input{
+    border: transparent;
+    border-bottom: 0.1rem solid var(--text-color);  
+    background-color: transparent;
+    outline: none;
+    font-size: 1.5rem;
+    max-width: 10rem;
+    max-height: 3rem;
+    color: var(--text-color);
+    margin-bottom: 1rem;
+}
+
+.modal-nav input:focus{
+    box-shadow: 0 0 0.1875rem var(--text-color);
+    outline-offset: 0px;
+    outline: none;
+}
+
+.modal button{
+    padding: 0.5rem 0.75rem;
+    background: transparent;
+    border: 0.0625rem solid var(--text-color);
+    border-radius: 0.4rem;
+    font-size: 1rem;
+    color: var(--text-color);
+    margin-top: 1rem;
+}
+
+.modal button:hover{
+    background: var(--text-color);
+    color: white;
 }
 
 .modal-footer{
@@ -215,16 +286,7 @@ a{
     -ms-flex-pack: justify;
     justify-content: center;
     padding: .9375rem;
-    border-top: 0.0625rem solid #eceeef;
-}
-.modal-title {
-    margin-top: 0;
-    margin-bottom: 0;
-    line-height: 1.5;
-    font-size: 1.25rem;
-    font-weight: 500;
-    color: var(--text-color);
-    font-family: Jost, sans-serif;
+    border-top: 0.0625rem solid var(--text-color);
 }
 
 .close {
@@ -246,51 +308,8 @@ a{
     opacity: .75;
 }
 
-.modal-body {
-    position: relative;
-    -webkit-box-flex: 1;
-    -webkit-flex: 1 1 auto;
-    -ms-flex: 1 1 auto;
-    flex: 1 1 auto;
-    padding: 1.5rem;
-    overflow: auto;
-}
-
-.modal-nav{
-    display: flex;
-    flex-flow: column wrap;
-    align-items: center;
-    justify-content: center;
-    gap: 2rem;
-}
-
-.modal-nav input{
-    border: transparent;
-    border-bottom: 0.1rem solid var(--text-color);  
-    background-color: transparent;
-    outline: none;
-    font-size: 1rem;
-    max-width: 10rem;
-}
-
-.modal-nav input:focus{
-    box-shadow: 0 0 0.1875rem var(--text-color);
-    outline-offset: 0px;
-    outline: none;
-}
-
-.modal button{
-    padding: 0.5rem 0.75rem;
-    background: transparent;
-    border: 0.0625rem solid var(--text-color);
-    border-radius: 0.4rem;
-    font-size: 1rem;
-    color: var(--text-color);
-}
-
-.modal button:hover{
-    background: var(--text-color);
-    color: white;
+.modal-title, .close{
+    margin: 0 1rem;
 }
 
 /*-----------main-page--------------*/
@@ -400,7 +419,7 @@ a{
 
 /*-------------------Reg/Auth----------------------*/
 
-.card-authreg-content{
+.card-authreg-section{
     display: -webkit-box;
     display: -webkit-flex;
     display: -ms-flexbox;
@@ -419,7 +438,7 @@ a{
 }
 
 @media (min-width: 48rem) {
-    .card-authreg-content {
+    .card-authreg-section {
         -webkit-box-shadow: 1.25rem 1.25rem 0.25rem 0rem rgba(0, 0, 0, 0.25);
         box-shadow: 1.25rem 1.25rem 0.25rem 0rem rgba(0, 0, 0, 0.25);
     }
@@ -439,14 +458,14 @@ a{
     -ms-flex-pack: justify;
     justify-content: center;
     padding: .9375rem;
-    border-bottom: 0.0625rem solid #eceeef;
+    border-bottom: 0.0625rem solid var(--text-color);
 }
 
 .card-authreg-title {
     margin-top: 0;
     margin-bottom: 0;
     line-height: 1.5;
-    font-size: 1.75rem;
+    font-size: 2rem;
     font-weight: 500;
     color: var(--text-color);
     font-family: Jost, sans-serif;
@@ -460,6 +479,8 @@ a{
     flex: 1 1 auto;
     padding: 1.5rem;
     overflow: auto;
+    min-width: 35rem;
+    font-size: 1.5rem;
 }
 
 .card-authreg-nav{
@@ -467,21 +488,47 @@ a{
     flex-flow: column wrap;
     align-items: center;
     justify-content: center;
-    gap: 2rem;
+    gap: 1rem;
+}
+
+.card-authreg-nav label{
+    text-align: left;    
 }
 
 .card-authreg-nav input{
-    border: transparent;
-    border-bottom: 0.1rem solid var(--text-color);  
+    border: 0.1rem solid var(--text-color);  
     background-color: transparent;
     outline: none;
-    font-size: 1rem;
-    max-width: 10rem;
-    
+    font-size: 1.5rem;
+    max-width: 25rem;
+    max-height: 3rem;
+    margin-bottom: 1rem;
 }
 
 .card-authreg-nav input,label{
     color: var(--text-color);
+}
+
+
+.card-authreg-nav input:focus{
+    box-shadow: 0 0 0.1875rem var(--text-color);
+    outline-offset: 0px;
+    outline: none;
+    border-radius: 0.1825rem;
+}
+
+.card-authreg-nav button{
+    padding: 0.5rem 0.75rem;
+    background: transparent;
+    border: 0.0625rem solid var(--text-color);
+    border-radius: 0.4rem;
+    font-size: 1.5rem;
+    color: var(--text-color);
+    margin: 1rem 0;
+}
+
+.card-authreg-nav button:hover{
+    font-weight: bold;
 }
 
 .card-authreg-footer{
@@ -497,30 +544,9 @@ a{
     -webkit-justify-content: space-between;
     -ms-flex-pack: justify;
     justify-content: center;
-    padding: .9375rem;
-    border-top: 0.0625rem solid #eceeef;
+    padding: 0.9375rem;
+    border-top: 0.0625rem solid var(--text-color);
 }
-
-.card-authreg-nav input:focus{
-    box-shadow: 0 0 0.1875rem var(--text-color);
-    outline-offset: 0px;
-    outline: none;
-}
-
-.card-authreg-nav button{
-    padding: 0.5rem 0.75rem;
-    background: transparent;
-    border: 0.0625rem solid var(--text-color);
-    border-radius: 0.4rem;
-    font-size: 1rem;
-    color: var(--text-color);
-}
-
-.card-authreg-nav button:hover{
-    background: var(--text-color);
-    color: white;
-}
-
 
 /*----------------------LK-------------------------*/
 
